@@ -18,6 +18,7 @@ menu.item.scmSync=Sync
 
 menu.title.debugger=Debugger
 menu.item.debug=Debug...
+menu.item.debugAgain=Debug Again
 menu.item.debugRemote=Debug Remote...
 menu.item.showInputTokens=Show Input Tokens
 menu.item.hideInputTokens=Hide Input Tokens
