@@ -3,6 +3,7 @@ Version 1.0b10 -
 
 - syntax coloring parser has been rewritten
 - ability to jump to tokens defined in the options block
+- ability to debug again (after having launched the debugger once in the current session)
 - fixed a bug when double-clicking a word: selection would be incorrect
 - fixed a bug when trying to generate a parser/lexer from a tree grammar (would loop forever)
 
